--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
     <h1>File Upload</h1>
-    <form action="/upload" method="POST" enctype="multipart/form-data">
+    <form action="http://localhost:3000/upload" method="POST" enctype="multipart/form-data">
         <input type="file" name="file">
         <button type="submit">Upload</button>
     </form>
+    
 </body>
 </html>
