--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>File Upload</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,6 +54,10 @@
             <button type="submit">Upload</button>
         </form>
     </div>
+    <div class="file-data" id="fileData">
+        <!-- File data will be displayed here -->
+    </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
 
